Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-5827

enums in typedefs are not resolved in all cases

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.22.0
    • Delphi - Compiler
    • None
    • Patch Available

    Description

      Depending on the order of the IDL declarations some enum typedefs are not properly resolved for Delphi targets.

      This fails to resolve MyEnumV2:

      struct Foo {
          1: TypeDefedEnum Value
      }
      
      typedef SomeEnum TypeDefedEnum
      
      enum SomeEnum { First, Second, Last }
      

      This works (= workaround):

      struct Foo {
          1: TypeDefedEnum Value
      }
      
      enum SomeEnum { First, Second, Last }
      
      // place typedef after enum decl
      typedef SomeEnum TypeDefedEnum
      
      

       

      Attachments

        Issue Links

          Activity

            People

              jensg Jens Geyer
              jensg Jens Geyer
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 20m
                  20m