THRIFT-5827 enums in typedefs are not resolved in all cases Client: Delphi Patch: Jens Geyer